--- a/templates/image_sharing_app/profile_settings.html
+++ b/templates/image_sharing_app/profile_settings.html
@@ -41,7 +41,7 @@
                                 </button>
                             </div>
                         </div>
-                        <small class="text-muted">Maximum file size: 5MB. Supported formats: JPG, PNG, GIF</small>
+                        <div class="file-info">Maximum file size: 5MB. Supported formats: JPG, PNG, GIF</div>
                     </div>
                     {{ form.bio|as_crispy_field }}
 
