Implement uniform card sizes in image gallery with title and description truncation

--- a/templates/image_sharing_app/base.html
+++ b/templates/image_sharing_app/base.html
@@ -116,6 +116,7 @@
         border-color: #375a7f !important;
       }
     </style>
+    {% block extra_css %}{% endblock %}
   </head>
   <body class="dark-mode">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
