--- a/templates/image_sharing_app/search.html
+++ b/templates/image_sharing_app/search.html
@@ -12,7 +12,7 @@
         {% for image in images %}
         <div class="col-md-4 mb-4">
             <div class="card image-card">
-                <img src="{{ image.image.url }}" class="card-img-top" alt="{{ image.title }}">
+                <img src="{{ image.image.url|cut:'@' }}" class="card-img-top" alt="{{ image.title }}">
                 <div class="card-body">
                     <h5 class="card-title">{{ image.title }}</h5>
                     <p class="card-text">{{ image.description|truncatewords:30 }}</p>
